--- a/MReg1.Rmd
+++ b/MReg1.Rmd
@@ -37,11 +37,15 @@ save_fig <- function(filename, save = TRUE){
 }
 ```
 
-```{css, eval=F}
+```{css, eval=T}
 /* CSS Stil für Formeln unter Scatterplots */
 P.math {
     text-align: center;
     font-size: 2vw;
+}
+
+table {
+  width: 50%;
 }
 
 ```
@@ -75,6 +79,97 @@ Lernziele für dieses Video sind…
 - dass Sie aufzählen können, welche Vorteile eine Mehrebenenregression hat.
 - dass Sie wissen, welche unterschiedlichen Varianten der Mehrebenenregression es gibt.
 - dass Sie entscheiden können, für welche Fragestellungen welche Variante der Mehrebenenregression geeignet ist.
+
+
+# Die Kurzfassung
+
+Auf der einen Seite gibt es die Wirklichkeit, auf der anderen Seite, das statistische Modell, mit dem wir diese Wirklichkeit möglichst gut abbilden wollen.
+
+In der empirisch-analytischen Wissenschaft sagen wir, im der Wirklichkeit gibt es einen datengenerierenden Prozesses (DGP datagenerating process).  Das ist einen Kette an Ursache/Wirkungszusammenhängen, an deren Ende das Phänomen steht, das wir erklären wollen. Also eine Ablauf an Mechansimen, der dazu führt, dass z.B. unsere Befragten den einen oder anderen Wert auf der Y-Variable - der abhängigen Variable erhalten.
+
+Unsere Theorien versuchen diesen DGP zu beschreiben - zumindest einen für uns relevanten Ausschnitt davon. Die Theorie liefert uns die unabhängigen Variablen, die dafür verwantwortlich sein sollen, warum eine Befragte den ein oder anderen Wert auf der Y-Variable aufweist.
+
+Mit dem statistischen Modell versuchen wir dann diese Theorie über den datengenerierenden Prozess mathematisch/statistisch auszudrücken. 
+
+In aller Regel laufen solche datengenerierende Prozesse aber Kontextabhängig ab. Die Mechanismen die wirken, können je nach Kontext einen stärkeren oder schwächeren Effekt haben, keinen Effekt haben, oder sogar einen umgekehrten Effekt aufweisen. 
+
+Der Kontext, das sind alle Möglichen Einbettungen, in denen Menschen sich bewegen: Menschen sind Teil von Gruppen, Klassen, Parteien, Orten, Stadtteilen, Ländern und vielem mehr.
+
+Unsere datengenerierenden Prozesse führen also zu einer verschachtelten Struktur der Daten (nested data). Man spricht auch von hierarchischen Daten, oder von einer Mehrebenenstruktur.
+
+Solche Ebenen können neben sozialen Gruppen und Organisationszugehörigkeiten auch räumliche Einheiten sein, oder Erhebungszeitpunkte, oder sogar Experimentalgruppen. 
+
+Immer wenn solche hierarschichen Daten vorliegen, ist die Mehrebenenregression das passende statistische Modell, dass den datengenerierenden Prozess am besten abbilden kann. 
+
+Technisch spricht man davon, dass es mehrere Ebenen gibt, im englischen *levels*.
+Jede Ebene hat eine bestimmte Anzahl an Fällen (*Units*).
+
+Wir besschäftigen uns hier mit dem einfachen Fall von zwei Ebenen.
+
+- die erste Ebene ist die Individualebene, hier finden wir unsere Befragten. Es ist die untereste Ebene, kurz: L1 für Level 1. Als Index nutzen wir das $i$.
+- die Kontextebene ist die obere Ebene oder L2. Diese Ebene sind die Länder oder Klassen. Als Index nutzen wir das $j$.
+
+Wir haben $n$ Individuen $i_{1, ...n}$ auf Ebene 1 geclustert in $j$ Klassen/Gruppen
+$j_{1,...m}$ auf Ebene 2.
+
+Nehmen wir beispielsweise den ESS Datensatz, dann haben wir: 
+
+```{r}
+library(foreign)
+ess <- read.spss("./Daten/ESS9e02.sav", 
+                 use.value.labels = FALSE,
+                 to.data.frame = TRUE,
+                 reencode = TRUE)
+library(ggplot2)
+ggplot(ess, aes(x=cntry)) +
+  geom_bar() +
+  geom_text(stat='count', aes(label=..count..), 
+            col="white",
+            hjust=1,
+            angle=90) +
+  theme_minimal()
+```
+
+Wir haben $`r length(ess[,1])`$ Individuen $i_{1,\dots`r length(ess[,1])`}$ auf Ebene 1 geclustert in $`r length(unique(ess[,'cntry']))`$ Klassen/Gruppen
+$j_{1,\dots `r length(unique(ess[,'cntry']))`}$ auf Ebene 2.
+
+
+
+Die MLM Ist notwendig wenn ausreichend Varianz auf L2 vorhanden. ICC Design Effect 
+Wenn nicht, ist die MLM Identisch mit der OLS
+Wenn vorhanden aber nicht MLM sondern OLS: Verstoß gegen Regressionsannahmen, Unterschätzte Standardfehler
+
+
+Vorteile
+Wenn Prognose:
+Deutlich bessere Vorhersage: 
+-	Bessere Prognose als wenn ML Struktur unberücksichtigt (höhere Erklärungskraft)
+-	Ehrlichere Unsicherheit als wenn unberücksichtigt
+-	Weniger Unsicherheit als bei einzelnen Ländern
+-	Geringere Variabilität der Schätzung als bei einzelnen Ländern 
+Wenn Inferenz: explizite Modellierung
+Welchen Einfluss haben Prädiktoren auf Ebene 1 an der Varianz auf Ebene 1
+Welchen Einfluss haben Prädiktoren auf Ebene 2 an der Varianz auf Ebene 2
+Unterscheiden sich die Effekte eines Prädiktors der Ebene 1 zwischen Einheiten der Ebene 2
+Können Prädiktoren der Ebene 2 erklären, warum sich Effekte von Prädiktoren der Ebene 1 zwischen den Ebene 2 Einheiten unterscheiden?
+
+Dafür stehen unterschiedliche Varianten zur Verfügung, wie man das Modell spezifiziert:
+Bild Gelman
+
+Zusätzlich bekommt man Mehrere R^2 für variierende Parameter
+
+
+
+
+Und wie sieht das technisch aus?
+	
+Die MLM erweitert die einfache OLS Regression
+Aus y=a+bx wird im einfachsten Fall
+yij = _0j + b1+ rij
+mit _0j = 00 + u0j
+ERLÄUTERN
+
+
 
 
 #	Ein Modell mit vielen Namen
@@ -750,40 +845,43 @@ grid.arrange(p1, p2, nrow=1)
 save_fig("V1_4_5.png", save)
 ```
 
+Wir rechnen eine OLS Regression, bei der alle Befragten unabhängig vom Land gleichzeitig berücksichtigt werden. Wir betrachten also die Fälle als eine einzige große Stichprobe. In der Literatur findet man dafür manchmal die Bezeichnung *full  pooling*, weil alle Ebene 2 Einheiten zusammengepoolt werden.
+
 Links ist die Regressionsgerade zu sehen. Rechts die Verteilung der Residuen getrennt nach Ländern. Für Bulgarien überschätzt die Regressionsgerade das politische Vertrauen. Die Residuen sind im Schnitt negativ. 
 
 Für Norwegen dagegen unterschätzen wir mit der Regressionsgeraden das politische Vertrauen. Die Residuen sind also im Schnitt positiv.
 
-Die Fehler der Individualebene korrelieren also mit einem Kontextmerkmal, nämlich der Länderzugeghörigkeit der Befragten. 
+Die Fehler der Individualebene korrelieren also mit einem Kontextmerkmal, nämlich der Länderzugehörigkeit der Befragten. Wir nehmen an, die Befragten wären unabhängig voneinander, was sie in Wahrheit nicht sind. 
 
-In der Folge ist oft die Varianz der Fehler nicht konstant ist, es liegen also heteroskedastische Fehler vor. 
-Außerdem kann es sein, dass die Residuen nicht unabhängig von den X-Variablen sind, wenn sie mit der übergeordneten Ebene korrelieren. Sie verstoßen also gegen Regressionsannahmen.
+In der Folge ist oft die Varianz der Fehler nicht konstant ist, es liegen also heteroskedastische Fehler vor.  Außerdem kann es sein, dass die Residuen nicht unabhängig von den X-Variablen sind, wenn sie mit der übergeordneten Ebene korrelieren. Sie verstoßen also gegen Regressionsannahmen.
 
+Auch die Standardfehler die für die Regressionskoeffizienten im einfachen OLS Modell berechnet werden, werden auf Basis der gesamten Stichprobe berechnet. Es wird nicht berücksichtigt, dass die Varianzen und Fallzahlen in den Gruppen unterschiedlich sind. Als Folge werden die Standardfehler unterschätzt. 
 
-
-** Wir tun also als ob ...Thus the complete pooling model, by ignoring correlations of y-values within clusters, assumes that all individuals are independent. In so doing, it estimates a standard error consistent with such an assumption. The partial_pooling model is designed for this problem and such, appropriately adjusts the standard error estimate by differentially weighting the sample size. I will try to come back and put in the different standard errors calculations for the three models.**
-
-Konkrete Auswirkungen sind, dass möglicherweise die Standardfehler unterschätzt. 
 Wenn die Standardfehler aber kleiner sind, als sie sein müssten, wird auch die Irrtumswahrscheinlichkeit beim Signifikanztest unterschätzt. 
 
 Im schlechtesten Fall gehen Sie also von signifikanten Effekten aus, wo in Wahrheit kein Zusammenhang zu finden ist.
 
 Darüber hinaus kann es auch sein, dass das Modell inhaltlich fehlspezifiziert ist. Unterschiede zwischen den Ländern werden durch die einfache OLS Regression überdeckt.
 
+Vielleicht werden Sie jetzt sagen, es gibt doch eine naheliegende Lösung: Können wir nicht eine OLS Regression rechnen und die übergeordnete Ebene explizit im Modell berücksichtigen? Man kann ja Dummy-Variablen für die Länderzugehörigkeit mit ins Modell aufnehmen.
 
-### Eine naheliegende Lösung {.unnumbered}
+Ein solches Modell wird in der Literatur *no pooling* Modell bezeichnet. Wir könnten auch für jedes Land ein separates Regressionsmodell schätzen. Wir betrachten also jedes Land als separate Stichprobe.
 
-Vielleicht werden Sie jetzt sagen, es gibt doch eine naheliegende Lösung: Können wir nicht zum Beispiel einfach Länderdummies ins Regressionsmodell mit aufnehmen?
+Aber auch diese Spezifikation führt nicht zu einer zufriedenstellenden Schätzung der gesuchten Regressionsparameter.
 
-Leider nein. Weil variablität der Effekte überschätzt wird. Und auch die SE sind größer, da die L2 Einheiten unabhängig voneinsander betrachtet werde und die Informationen aus dem Rest des Samples ingnoriert werden.
+Weil Variabilität der Effekte überschätzt wird. Und auch die Standardfehler sind größer, da die Ebene 2 Einheiten unabhängig voneinander betrachtet werden. Die Informationen die im Rest der Stichprobe, also in den anderen Ländern vorhanden sind, werden dabei ignoriert.
 
-DIe Mehrebenenregression ist ein Kompromiss. Schätzt die SE in dem es ** The partial_pooling model is designed for this problem and such, appropriately adjusts the standard error estimate by differentially weighting the sample size. I will try to come back and put in the different standard errors calculations for the three models.** 
+Die Mehrebenenregression ist ein Kompromiss aus no pooling und full pooling. Wir betrachten die Daten als eine große, aber nach Ländern geschichtete Stichprobe. Es ist ein *partial pooling*.  
 
-$$\widehat{SE}(\hat{\beta}^{OLS}) \approx \sqrt{\dfrac{\hat\psi + \hat\theta}{Jn}}$$
+Die Regressionsparameter für die jeweiligen Länder sind dann quasi ein gewichteter Mittelwert, aus den Daten für das jeweilige Land und den Daten aus den anderen Ländern.
+
+Wenn wir für ein Land überdurchschnittlich viele Befragte haben, wird der geschätzte Regressionsparameter stärker von den Fällen des jeweiligen Landes bestimmt.
+
+Wenn für ein Land besonders wenige Fälle vorliegen (wenn wir also eine große Unsicherheit bezüglich unserer Schätzung hätten), wird der geschätzte Regressionsparameter stärker von den Werten der anderen Länder beeinflusst. 
+
+Da so die Informationen aus der gesamten Stichprobe berücksichtigt werden, haben wir kleinere Standardfehler als wenn wir jedes Land für sich alleine betrachten. Und die Standardfehler berücksichtigen trotzdem, dass für jedes Land eine andere Varianz und andere Fallzahl auf Ebene 1 vorliegt. So haben wir eine präzisere Schätzung und kleinere Konfidenzbänder, also weniger Unsicherheit.
 
 
-$$\widehat{SE}(\hat{\beta}^{Mixed}) = \sqrt{\dfrac{\hat\psi + \dfrac{\hat\theta}{n}}{J}}$$
-$$\widehat{SE}(\hat{\beta}^{NoPool}) = \sqrt{\dfrac{\hat\theta}{Jn}}$$
 
 ```{r, eval=F}
 library(foreign)
